took off navigation position:fixed featuer; finally aligned form to the right and centered

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -11,6 +11,7 @@
   color: white;
   padding: 0 30px;
   z-index:111111;
+  margin-top:-60px;
 }
 
 #create-post{
